style(main.scss): fix alignment overflow issue with file names

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -267,7 +267,8 @@ body {
       .file-item {
         height: 32px;
         display: grid;
-        grid-template-columns: 1fr 200px 120px 100px;
+        grid-template-columns: 32px 1fr 200px 120px 100px;
+        justify-items: start;
         align-items: center;
         padding: 0 16px;
         font-size: 13px;
